# uv-workspace-example-cable

./: README.md  pyproject.toml
src/cable/: __init__.py  cli.py
